<?xml version="1.0"?>
<package format="3">
  <name>roomba_description</name>
  <version>0.0.0</version>
  <description>The roomba_description package</description>

  <maintainer email="amslab@meiji.ac.jp">amsl</maintainer>

  <license>BSD</license>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
